<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.shltr.darrieng.shltr_android.Activity.SignupActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="90dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="32dp"
            android:src="@drawable/ic_search"/>

        <LinearLayout
            android:id="@+id/button_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:text="@string/signup"/>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/text_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="16dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:gravity="center">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/enterInputView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:drawableStart="@drawable/ic_email_white_48px"
                    android:drawablePadding="16dp"
                    android:maxLines="1"
                android:text="joshuahassler24@gmail.com"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/enter_pw_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_pw"
                    android:drawablePadding="16dp"
                    android:maxLines="1"
                android:text="yourmom"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/go_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:src="@drawable/ic_done"
                android:layout_margin="16dp"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
